`SdsClient` Refactoring (#355)
* Refactor `SdsFilter` for readabilty

* Refactor into seperate methods for easier readability.

* * Refactor `prepareLookupUri` to use regex matching for readability.

* Refactor SDS Client for readability

* Refactored anonymous method in retrieve data to a private method with meaningful naming
* Rename `doBundleEntryCheck` to more readable name and fix duplicate logging of bundle details.

* * Replace Runtime Exceptions in `SdsClient` with `SdsExceptions`

* * Replace Runtime Exceptions in `SdsClientTest` with `SdsExceptions`

* * Replace RuntimeExceptions across the SdsClient tests with SdsExceptions.

* * Replace SdsExceptions in the `SdsFilter` with `SdsFilterException`